# shoppinghauer

./: CMakeLists.txt  Main.qml  README.md  main.cpp  qtquickcontrols2.conf
android/: AndroidManifest.xml
assets/i18n/: shoppinghauer-ru.ts
assets/logo/: logo.xcf
cpp/: main.cpp
i18n/: shoppinghauer_ru.ts
qml/: Main.qml
qml/components/: BorderDelegate.qml  EditToolButton.qml  OkButton.qml  PageListView.qml  PlusToolButton.qml  StyleToolButton.qml  StyledCheckBox.qml  StyledLabel.qml  style.js  utils.js
qml/components/style/: StyledDialog.qml  StyledToolButton.qml  style.js
qml/dialogs/: AboutDialog.qml
qml/main/: AboutDialog.qml  MenuToolButton.qml  NavigationMenu.qml  OptionsMenu.qml  OptionsMenuToolButton.qml
qml/pages/: NamedPage.qml
qml/pages/products/: ProductEditorPage.qml  ProductsPage.qml
qml/pages/shoppinglists/: ShoppingListEditorPage.qml  ShoppingListsPage.qml
qml/pages/shoppings/: ShoppingListEditorPage.qml  ShoppingListsPage.qml  ShoppingsPage.qml
src/: config.h.in  main.cpp
src/core/: Application.cpp  Application.h
src/database/: Database.cpp  Database.h  Migrater.cpp  Migrater.h
